--- a/css/style.css
+++ b/css/style.css
@@ -5,28 +5,31 @@
   box-sizing: border-box;
 }
 
+.orbitron {
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 /* 2. Typographie de base */
 body {
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: "Orbitron", Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #222;
   background-color: #fafafa;
   margin: 0;
-  padding: 1rem;
-  background: linear-gradient(
-    to bottom,
-    #2c3e50,
-    #4ca1af
-  ); /* fond météo doux */
+  padding: 0;
+  background: linear-gradient(to bottom, #2c3e50, #4ca1af);
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 }
 
 /* NAVBAR FIXE */
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 60px;
   background-color: transparent;
@@ -99,4 +102,104 @@ h1 {
   text-align: center;
   transform: translateY(-50%);
   cursor: pointer;
+}
+
+.now {
+  width: 68vw;
+  display: flex;
+  justify-content: center;
+
+  border-radius: 3rem;
+
+  background: rgba(255, 255, 255, 0); /* fond transparent */
+  /* bord doux */
+
+  backdrop-filter: blur(10px);
+
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5); /* ombre douce */
+}
+
+.now_right {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+  padding: 3rem;
+  color: #fffafa;
+  justify-content: space-between;
+}
+
+.now_left {
+  display: flex;
+  width: 65%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5rem;
+  padding: 3rem;
+  background-color: #fffafa;
+  border-top-left-radius: 3rem;
+  border-bottom-left-radius: 3rem;
+}
+
+.right_header {
+  display: flex;
+  justify-content: left;
+  width: 100%;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.weather {
+  display: flex;
+  align-items: center;
+}
+
+.weather_temp_number {
+  font-size: 5rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+.weather_temp_conditions {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
+.text_align_center {
+  text-align: center;
+}
+
+.weather_icon img {
+  width: 13rem;
+}
+
+.green {
+  color: #4ca1af;
+}
+
+.date,
+.hourly_forecast_title {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.temp_min,
+.temp_max {
+  display: flex;
+  align-items: center;
+  height: 2rem;
+}
+
+.temp_min svg,
+.temp_max svg {
+  width: 2rem;
+  height: 2rem;
+  display: block;
+}
+
+.temp_min span,
+.temp_max span {
+  font-size: 1rem;
 }
