--- a/css/style.css
+++ b/css/style.css
@@ -108,15 +108,11 @@ h1 {
   width: 68vw;
   display: flex;
   justify-content: center;
-
   border-radius: 3rem;
-
-  background: rgba(255, 255, 255, 0); /* fond transparent */
-  /* bord doux */
-
+  background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(10px);
-
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5); /* ombre douce */
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
+  margin-top: 2rem;
 }
 
 .now_right {
