--- a/css/style.css
+++ b/css/style.css
@@ -126,14 +126,17 @@ h1 {
   flex-direction: column;
   flex: 1;
   align-items: center;
-  padding: 3rem;
+  padding-top: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 3rem;
   color: #fffafa;
   justify-content: space-between;
 }
 
 .now_left {
   display: flex;
-  width: 65%;
+  width: 60%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -211,4 +214,39 @@ h1 {
 .temp_min span,
 .temp_max span {
   font-size: 1rem;
+}
+
+
+.hourly_forecast {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 2.5rem;
+}
+
+.hourly_forecast_title {
+  text-align: center;
+}
+
+.hourly_forecast_list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.hourly_forecast_item {
+  flex: 1 1 calc(25% - 1rem);
+
+  max-width: calc(25% - 1rem);
+
+  min-width: 5rem;
+
+  padding: 3rem 0.5rem;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 2.5rem;
+  text-align: center;
+  color: #2c3e50;
+  font-weight: bold;
 }
