--- a/css/style.css
+++ b/css/style.css
@@ -134,24 +134,21 @@ h1 {
   justify-content: space-between;
 }
 
-
 .now_left {
   display: flex;
   width: 60%;
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  gap: 2.5rem;
   padding: 3rem;
   background-color: #fffafa;
   border-top-left-radius: 3rem;
   border-bottom-left-radius: 3rem;
-  gap: 3rem;
 }
 
-
 .left_header,
-.daily_forecast {
+.daily_forecast,
+.conditions {
   display: flex;
   flex-direction: column;
   justify-content: left;
@@ -173,14 +170,14 @@ h1 {
 }
 
 .weather_temp_number {
-  font-size: 5rem;
+  font-size: 3rem;
   font-weight: bold;
   display: flex;
   align-items: center;
 }
 
 .weather_temp_conditions {
-  font-size: 1.6rem;
+  font-size: 1.25rem;
   font-weight: bold;
 }
 
@@ -220,7 +217,6 @@ h1 {
 .temp_max span {
   font-size: 1rem;
 }
-
 
 .hourly_forecast {
   display: flex;
@@ -264,6 +260,13 @@ h1 {
   justify-content: space-around;
 }
 
+.conditions_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+
 .daily_forecast_item {
   background-color: white;
   border-radius: 1rem;
@@ -280,4 +283,55 @@ h1 {
 
 .daily_forecast_item_weather {
   font-size: 0.6rem;
+}
+
+.conditions_item {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  font-size: 0.75rem;
+
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
+  color: #2c3e50;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  min-width: 10rem;
+}
+
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  opacity: 0.5;
+}
+
+.loader {
+  width: 4rem;
+  height: 4rem;
+  border: 7px solid #ccc;
+  border-top-color: #2c3e50;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loader-wrapper.hidden {
+  opacity: 0;
+  visibility: hidden;
 }
