--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,14 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+html {
+  font-size: 16px; /* 1rem = 18px maintenant */
+}
 
 /* 2. Typographie de base */
 body {
   font-family: "Orbitron", Arial, sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.5;
   color: #222;
   background-color: #fafafa;
@@ -118,7 +121,7 @@ h1 {
   background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(10px);
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
-  margin-top: 2rem;
+  margin-top: 1rem 0;
 }
 
 .now_right {
