--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ h1 {
   background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(10px);
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
-  margin-top: 1rem 0;
+  margin: 1rem 0;
 }
 
 .now_right {
